# canvash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  main.c
canvash_lib/: CMakeLists.txt  canvash.c  canvash.h  defines.h  shader.c  shader.h
canvash_lib/lib/cglm/include/cglm/: box.h  cam.h  ease.h  io.h  mat2.h  mat3.h  mat4.h  quat.h  ray.h
canvash_lib/lib/cglm/include/cglm/call/: cam.h  euler.h  frustum.h  io.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  quat.h  ray.h  vec2.h  vec3.h  vec4.h
canvash_lib/lib/cglm/include/cglm/call/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h
canvash_lib/lib/cglm/include/cglm/simd/: arm.h  intrin.h  wasm.h  x86.h
canvash_lib/lib/cglm/include/cglm/simd/sse2/: affine.h  mat2.h  mat3.h  mat4.h  quat.h
canvash_lib/lib/cglm/include/cglm/struct/: box.h  cam.h  io.h  mat2.h  mat3.h  mat4.h  quat.h  vec2.h
canvash_lib/lib/cglm/src/: affine.c  affine2d.c  bezier.c  box.c  cam.c  config.h  curve.c  ease.c  euler.c  frustum.c  io.c  ivec2.c  ivec3.c  ivec4.c  mat2.c  mat2x3.c  mat2x4.c  mat3.c  mat3x2.c  mat3x4.c  mat4.c  mat4x2.c  mat4x3.c  plane.c  project.c  quat.c  ray.c  sphere.c  vec2.c  vec3.c  vec4.c
canvash_lib/lib/cglm/src/clipspace/: ortho_lh_no.c  ortho_lh_zo.c  ortho_rh_no.c  ortho_rh_zo.c  persp_lh_no.c  persp_lh_zo.c  persp_rh_no.c  persp_rh_zo.c  project_no.c  project_zo.c  view_lh_no.c  view_lh_zo.c  view_rh_no.c  view_rh_zo.c
canvash_lib/lib/stb/include/: stb_image.h
canvash_lib/res/shader/: ell_frag.glsl  ell_ol_frag.glsl  ell_ol_vert.glsl  ell_vert.glsl  frag.glsl  line_frag.glsl  line_vert.glsl  rect_frag.glsl  rect_vert.glsl  tri_vert.glsl  vert.glsl
examples/: main.c
